--- a/CSS/style.css
+++ b/CSS/style.css
@@ -51,6 +51,7 @@ p.kasandraf {
     height: 24px;
     margin-left: 13px;
     margin-top: 40px;
+    padding-right: 15px;
     width: auto;
 }
 .empathy-in-every-cl {
@@ -70,6 +71,7 @@ p.kasandraf {
 }
 .overlap-group {
     align-items: flex-end;
+    text-align: center;
     border: 1px solid;
     border-color: #84A873;
     border-radius: 20px;
@@ -77,7 +79,7 @@ p.kasandraf {
     justify-content: flex-end;
     margin-left: 20px;
     min-width: 50px;
-    padding: 3px 9px;
+    padding: 1px 9px;
 }
 .link {
     cursor: pointer;
@@ -88,6 +90,7 @@ p.kasandraf {
 }
 .overlap-group2 {
     align-items: flex-end;
+    text-align: center;
     border: 1px solid;
     border-color: #84A873;
     border-radius: 20px;
@@ -115,13 +118,14 @@ p.kasandraf {
 }
 .overlap-group1 {
     align-items: flex-end;
+    text-align: center;
     border: 1px solid;
     border-color: #84A873;
     border-radius: 20px;
     height: 48px;
     margin-left: 20px;
     min-width: 50px;
-    padding: 3px 15px;
+    padding: 1px 15px;
 }
 .place {
     cursor: pointer;
